--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
 		<p>{{message}}</p>
 		<input v-model="message">
 	</div>
+
+	<div id="app-7">
+		<ol>
+			<todo-item 
+				v-for="item in groceryList"
+				v-bind:todo="item"
+				v-bind:key="item.id">
+			</todo-item>
+		</ol>
+	</div>
+	
 <script>
 		var app = new Vue({
   		el: '#app',
@@ -89,6 +100,30 @@
 				message:"change yourself"
 			}
 		})
+
+		// 组件化应用构建
+
+		// Vue.component('todo-item', {
+		// 	template: '<li>这是一个代办事项</li>'
+		// })
+
+		Vue.component('todo-item', {
+			props:['todo'],
+			template: '<li>{{ todo.text }}</li>'
+		})
+
+		var app7 = new Vue({
+			el:"#app-7",
+			data: {
+				groceryList:[
+				{id:0, text:'水果'},
+				{id:0, text:'马甲'},
+				{id:0, text:'吃饭'}
+				]
+			}
+		})
+
+
 	</script>
 </body>
 </html>
